tests/baselines/reference/unusedClassesinNamespace5.errors.txt
tests/cases/compiler/unusedClassesinNamespace5.ts(10,11): error TS6196: 'c3' is declared but never used.


==== tests/cases/compiler/unusedClassesinNamespace5.ts (1 errors) ====
    namespace Validation {
        class c1 {
    
        }
    
        export class c2 {
    
        }
    
        class c3 {
              ~~
!!! error TS6196: 'c3' is declared but never used.
            public x: c1;
        }
    }